refactor complex forms

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -230,7 +230,7 @@ input.sheet-toggle {
   display: inline-grid;
   margin-bottom: 2%; }
 
-.sheet-pc div.sheet-repeating-container div.repitem, .sheet-pc div.sheet-skill-box label > input, .sheet-pc div.sheet-skill-box input[name='attr_skill'] {
+.sheet-pc div.sheet-repeating-container div.repitem, .sheet-pc div.sheet-skill-box label > input, .sheet-pc div.sheet-skill-box input[name='attr_skill'], .sheet-pc div.sheet-matrix div.sheet-programs div.repitem {
   border-bottom: 1px solid #333; }
 
 .sheet-center {
@@ -268,7 +268,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   box-shadow: 0px 0px 29px 8px  #f88703; }
 
 /***** GRID *****/
-.sheet-pc div.sheet-repeating-container div.repitem, .sheet-pc div.sheet-repeating-container div.repitem div.sheet-settings, .sheet-pc div.sheet-skill-box div.sheet-row-long, .sheet-pc div.sheet-magic div.sheet-headers {
+.sheet-pc div.sheet-repeating-container div.repitem, .sheet-pc div.sheet-repeating-container div.repitem div.sheet-settings, .sheet-pc div.sheet-skill-box div.sheet-row-long, .sheet-pc div.sheet-magic div.sheet-headers, .sheet-pc div.sheet-matrix div.sheet-complex-forms div.sheet-headers {
   grid-column-gap: 1%;
   grid-row-gap: 1%; }
 
@@ -288,7 +288,8 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   padding-left: 0.5%;
   /***** REPEATING CONTAINERS *****/
   /***** SKILLS *****/
-  /***** MAGIC *****/ }
+  /***** MAGIC *****/
+  /*** MATRIX ****/ }
   .sheet-pc button > h2:hover,
   .sheet-pc button > span:hover,
   .sheet-pc label > button[type='roll']:hover,
@@ -402,6 +403,9 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     padding: 1% 0.5%; }
     .sheet-pc div.sheet-repeating-container div.repitem input[type="text"] {
       width: 100%; }
+    .sheet-pc div.sheet-repeating-container div.repitem button[type='roll'],
+    .sheet-pc div.sheet-repeating-container div.repitem input[name='attr_name'] {
+      text-align: left; }
     .sheet-pc div.sheet-repeating-container div.repitem div.sheet-settings {
       background-color: #cccccc;
       border-left: 2px solid #555;
@@ -486,9 +490,6 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     /***** MAGICAL PREPERATIONS *****/ }
     .sheet-pc div.sheet-magic h3 {
       color: #040404; }
-    .sheet-pc div.sheet-magic button[type='roll'],
-    .sheet-pc div.sheet-magic input[name='attr_name'] {
-      text-align: left; }
     .sheet-pc div.sheet-magic div.sheet-headers {
       display: grid;
       grid-template-columns: 1fr 4em 4em 6em 3em 1em 1em; }
@@ -622,6 +623,93 @@ div.sheet-matrix-device .sheet-matrixFirewall {
           grid-template-columns: 1fr 5em 5em 6em 1em 1em; }
           .sheet-pc div.sheet-magic div.sheet-magic-preps div.sheet-prepared-preparations div.repitem div.sheet-settings select {
             grid-column: 4 / 7; }
+  .sheet-pc div.sheet-matrix h3 {
+    color: #040404; }
+  .sheet-pc div.sheet-matrix div.sheet-programs div.repitem {
+    grid-template-columns: 1fr 1em 1em; }
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem label[data-i18n-title="notes"],
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem h3[data-i18n='notes'],
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem div.sheet-collapse {
+      grid-column: 1 / 4; }
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input.sheet-collapse-flag,
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input.sheet-collapse-flag + span.sheet-pictos,
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span,
+    .sheet-settings-toggle .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input[type='checkbox'].sheet-collapse-flag + span,
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem .sheet-settings-flag input[type='checkbox'].sheet-collapse-flag + span,
+    .sheet-settings-flag .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input[type='checkbox'].sheet-collapse-flag + span,
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem .sheet-flag-primary + div > input.sheet-collapse-flag + span,
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem .repcontrol input.sheet-collapse-flag + span.repcontrol_edit:after,
+    .repcontrol .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input.sheet-collapse-flag + span.repcontrol_edit:after,
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem .repcontrol input.sheet-collapse-flag + span.repcontrol_add:after,
+    .repcontrol .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input.sheet-collapse-flag + span.repcontrol_add:after,
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem .itemcontrol input.sheet-collapse-flag + span.repcontrol_del,
+    .itemcontrol .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input.sheet-collapse-flag + span.repcontrol_del {
+      grid-area: 1 / 2 / 1 / 3; }
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input.sheet-settings-flag,
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input.sheet-settings-flag + span.sheet-pictos,
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-settings-flag + span,
+    .sheet-settings-toggle .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input[type='checkbox'].sheet-settings-flag + span,
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem .sheet-settings-flag input[type='checkbox'].sheet-settings-flag + span,
+    .sheet-settings-flag .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input[type='checkbox'].sheet-settings-flag + span,
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem .sheet-flag-primary + div > input.sheet-settings-flag + span,
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem .repcontrol input.sheet-settings-flag + span.repcontrol_edit:after,
+    .repcontrol .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input.sheet-settings-flag + span.repcontrol_edit:after,
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem .repcontrol input.sheet-settings-flag + span.repcontrol_add:after,
+    .repcontrol .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input.sheet-settings-flag + span.repcontrol_add:after,
+    .sheet-pc div.sheet-matrix div.sheet-programs div.repitem .itemcontrol input.sheet-settings-flag + span.repcontrol_del,
+    .itemcontrol .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input.sheet-settings-flag + span.repcontrol_del {
+      grid-area: 1 / 3 / 1 / 4; }
+  .sheet-pc div.sheet-matrix div.sheet-programs div.sheet-settings {
+    grid-column: 1 / 4; }
+    .sheet-pc div.sheet-matrix div.sheet-programs div.sheet-settings input[type='text'] {
+      grid-column: 1 / 4;
+      text-align: left; }
+    .sheet-pc div.sheet-matrix div.sheet-programs div.sheet-settings label {
+      grid-column: 1 / 4; }
+  .sheet-pc div.sheet-matrix div.sheet-complex-forms div.sheet-headers {
+    display: grid;
+    grid-template-columns: 1fr 5.5em 5.5em 4em 1em 1em; }
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.sheet-headers h2:nth-of-type(1n+2) {
+      text-align: center; }
+  .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem {
+    grid-template-columns: 1fr 5.5em 5.5em 4em 1em 1em; }
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem label[data-i18n-title="notes"],
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem h3[data-i18n='notes'],
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem div.sheet-collapse {
+      grid-column: 1 / 7; }
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input.sheet-collapse-flag,
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input.sheet-collapse-flag + span.sheet-pictos,
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span,
+    .sheet-settings-toggle .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input[type='checkbox'].sheet-collapse-flag + span,
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem .sheet-settings-flag input[type='checkbox'].sheet-collapse-flag + span,
+    .sheet-settings-flag .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input[type='checkbox'].sheet-collapse-flag + span,
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem .sheet-flag-primary + div > input.sheet-collapse-flag + span,
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem .repcontrol input.sheet-collapse-flag + span.repcontrol_edit:after,
+    .repcontrol .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input.sheet-collapse-flag + span.repcontrol_edit:after,
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem .repcontrol input.sheet-collapse-flag + span.repcontrol_add:after,
+    .repcontrol .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input.sheet-collapse-flag + span.repcontrol_add:after,
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem .itemcontrol input.sheet-collapse-flag + span.repcontrol_del,
+    .itemcontrol .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input.sheet-collapse-flag + span.repcontrol_del {
+      grid-area: 1 / 5 / 1 / 6; }
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input.sheet-settings-flag,
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input.sheet-settings-flag + span.sheet-pictos,
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-settings-flag + span,
+    .sheet-settings-toggle .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input[type='checkbox'].sheet-settings-flag + span,
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem .sheet-settings-flag input[type='checkbox'].sheet-settings-flag + span,
+    .sheet-settings-flag .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input[type='checkbox'].sheet-settings-flag + span,
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem .sheet-flag-primary + div > input.sheet-settings-flag + span,
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem .repcontrol input.sheet-settings-flag + span.repcontrol_edit:after,
+    .repcontrol .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input.sheet-settings-flag + span.repcontrol_edit:after,
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem .repcontrol input.sheet-settings-flag + span.repcontrol_add:after,
+    .repcontrol .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input.sheet-settings-flag + span.repcontrol_add:after,
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem .itemcontrol input.sheet-settings-flag + span.repcontrol_del,
+    .itemcontrol .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input.sheet-settings-flag + span.repcontrol_del {
+      grid-area: 1 / 6 / 1 / 7; }
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem div.sheet-row {
+      grid-column: 1 / 7; }
+    .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem div.sheet-settings {
+      grid-column: 1 / 7;
+      grid-template-columns: 1fr 5.5em 5.5em 4em 1em 1em; }
 
 /***** PC ROWS & COLUMNS SETTINGS *****/
 .sheet-pc-row {
@@ -1625,86 +1713,6 @@ input.sheet-skill-select[type='checkbox'] {
   -webkit-box-shadow: inset 0px 1px 5px 2px #470101;
   -moz-box-shadow: inset 0px 1px 5px 2px #470101;
   box-shadow: inset 0px 1px 5px 2px #470101; }
-
-/***** MATRIX PROGRAMS *****/
-.sheet-program-box {
-  /***** MATRIX PROGRAM SETTINGS *****/ }
-  .sheet-program-box .sheet-repeating-indent {
-    padding-left: 0em;
-    text-indent: -1em; }
-  .sheet-program-box input.sheet-program-toggle {
-    left: 5px;
-    top: 2px;
-    width: 15px; }
-  .sheet-program-box span.sheet-program-toggle {
-    left: 5px;
-    top: -3px; }
-  .sheet-program-box .sheet-settings div {
-    display: inline-block;
-    width: 100%; }
-  .sheet-program-box input[type='text'] {
-    border-radius: 0px;
-    border-bottom: 1px solid #000;
-    width: 98%; }
-
-/***** MATRIX PROGRAM DISPLAY *****/
-.sheet-matrix-box .sheet-display {
-  display: inline-block; }
-
-.sheet-program-box .sheet-repeat-box .sheet-display {
-  margin-left: 0px; }
-
-.sheet-program-box .sheet-display-row {
-  margin-left: 25px;
-  width: 95%; }
-
-.sheet-program-box .sheet-program-toggle {
-  position: absolute !important; }
-
-.sheet-program-box .sheet-program-toggle:checked span,
-.sheet-program-box .sheet-program-toggle:checked ~ .sheet-display-row,
-.sheet-program-box .sheet-program-toggle:checked ~ .sheet-collapsable {
-  opacity: 0.3; }
-
-.sheet-program-box input.sheet-display-flag {
-  left: 5%;
-  width: 90%; }
-
-.sheet-program-box .sheet-collapsable {
-  padding-left: 0em; }
-
-/***** COMPLEX FORMS *****/
-.sheet-form-box h3 {
-  margin-right: 1%;
-  width: 16%; }
-  .sheet-form-box h3:nth-of-type(1) {
-    width: 48%; }
-  .sheet-form-box h3:nth-of-type(5) {
-    margin-right: 0px;
-    width: 7%; }
-  .sheet-form-box h3:nth-of-type(4) {
-    width: 10%; }
-  .sheet-form-box h3[data-i18n="modifier"] {
-    width: 12%; }
-.sheet-form-box input[type='text'] {
-  width: 50%; }
-.sheet-form-box .sheet-settings div {
-  width: 100%; }
-.sheet-form-box select {
-  margin-right: 1%;
-  width: 17%; }
-.sheet-form-box .sheet-display {
-  display: inline-block; }
-  .sheet-form-box .sheet-display .sheet-display-row {
-    margin-right: 1%;
-    text-align: left;
-    width: 16%; }
-    .sheet-form-box .sheet-display .sheet-display-row:nth-of-type(1) {
-      width: 48%; }
-    .sheet-form-box .sheet-display .sheet-display-row:nth-of-type(4) {
-      width: 10%; }
-    .sheet-form-box .sheet-display .sheet-display-row:nth-of-type(5) {
-      width: 7%; }
 
 /***** VEHICLE *****/
 .sheet-vehicle-box .sheet-settings div,
