--- a/Shadowrun5thEdition/src/pug/_npc.pug
+++ b/Shadowrun5thEdition/src/pug/_npc.pug
@@ -243,8 +243,8 @@
 							+attributeSelect(val[1])
 						select.limit-select(name='attr_limit' title=`@{repeating_${key}`+'_${x}_limit}' value='physical_limit')
 							+limitSelect(val[2])
-						h2.full-row(data-i18n='specializations') Specializations
-						label.full-row(data-i18n-title='specializations' title='Specializations') 
+						h2.full-row(data-i18n='specialization') specialization
+						label.full-row(data-i18n-title='specialization' title='specialization') 
 							input(name='attr_specialization' placeholder='Specalizations' title=`@{repeating_${key}`+'_${x}_specialization}' type='text')
 
 		//- SPRITE ACTIVE SKILLS
