--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -334,6 +334,9 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 				@extend %borderBottom;
 
+				button[type='roll'],
+				input[name='attr_name'] { text-align: left; }
+
 				div.sheet-settings { 
 					background-color: $ccc;
 					border-left: 2px solid $gray;
@@ -427,9 +430,6 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 			h3 { color: $blacker; }
 
-			button[type='roll'],
-			input[name='attr_name'] { text-align: left; }
-
 			div.sheet-headers {
 				display: grid;
 				@extend %gridGap;
@@ -502,6 +502,63 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 							select { grid-column: 4 / 7; }
 						}
+					}
+				}
+			}
+		}
+
+
+		/*** MATRIX ****/
+		div.sheet-matrix {
+			h3 { color: $blacker; }
+			
+			div.sheet-programs {
+				$programGrid: 1fr 1em 1em;
+
+				div.repitem {
+					grid-template-columns: $programGrid;
+					@extend %borderBottom;
+					@include repeatingInformation(4);
+				}
+
+				div.sheet-settings { 
+					grid-column: 1 / 4;
+
+					input[type='text'] {
+						grid-column: 1 / 4;
+						text-align: left; 
+					}
+
+					label {
+						grid-column: 1 / 4;
+					}
+				}
+			}
+
+			div.sheet-complex-forms {
+				$complexFormsGrid: 1fr 5.5em 5.5em 4em 1em 1em;
+
+				div.sheet-headers {
+					display: grid;
+					@extend %gridGap;
+					grid-template-columns: $complexFormsGrid;
+
+					h2:nth-of-type(1n+2) { text-align: center; }
+				} 
+
+				div.repitem {
+					grid-template-columns: $complexFormsGrid;
+
+					@include repeatingInformation(7);
+
+					div.sheet-row {
+						grid-column: 1 / 7;
+					}
+
+					div.sheet-settings { 
+						grid-column: 1 / 7;
+						grid-template-columns: $complexFormsGrid;
+
 					}
 				}
 			}
