--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -144,6 +144,17 @@
 			text-align: left;}
 
 		h2, h3 { margin-right: 0px; }	
+
+		button[name="roll_soak"] { 
+			max-width: 27%; 
+
+			& > span {
+				display: block;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				width: 100%;
+			}
+		}
 	}
 
 	.sheet-flag-primary {
@@ -162,10 +173,10 @@
 	/***** PRIMARY ARMOR *****/
 	.sheet-armor-buttons {
 		display    : inline-block;
-		font-size  : 1.2em;
+		font-size  : 1.5em;
 		line-height: 20px;
 		margin-left: 1%;
-		width      : 30%;
+		width      : 35%;
 
 		button[type='roll'] { margin-right: -5px; }
 
@@ -628,9 +639,13 @@
 		height  : 100%;
 	}
 
-	$displayFlags: 'quality-box', 'contacts', 'item-box', 'spell-box', 'powers-box', 'program-box', 'aug-box', 'form-box', 'social-box', 'vehicle-box';
+	$displayFlags: 'quality-box', 'contacts', 'spell-box', 'social-box', 'vehicle-box';
 	@each $flag in $displayFlags {
 		.sheet-#{$flag} .sheet-display-flag { @extend %display-flag;}
+	}
+
+	div.sheet-augs div.sheet-repeat-box {
+		.sheet-display-flag { @extend %display-flag;}
 	}
 
 	%arms-display-flag {
@@ -641,14 +656,21 @@
 		left: 93%;
 	}
 
-	@each $flag in 'arms', 'spell-box', 'matrix' {
-		.sheet-#{$flag} input.sheet-display-flag,
-		.sheet-#{$flag} input.sheet-display-flag + span {
+
+	div.sheet-arms {
+		input.sheet-display-flag,
+		input.sheet-display-flag + span {
 			@extend %arms-display-flag;
 		}
 
-		.sheet-#{$flag} input.sheet-display-flag { top: 2px; }
-		.sheet-#{$flag} input.sheet-display-flag + span { top: -2px; }
+		input.sheet-display-flag { 
+			top: 2px; 
+			opacity: 0;
+		}
+
+		input.sheet-display-flag:checked ~ div.sheet-collapse div.sheet-desc { 
+			display: block; 
+		}
 	}
 
 /***** DISPLAY ROWS *****/
@@ -667,11 +689,7 @@
 
 /***** DISPLAY & SETTINGS *****/	
 	.sheet-skills-row,
-	.sheet-lifestyle .sheet-settings div,
-	.sheet-magic-rituals .sheet-settings div,
-	.sheet-spell-box .sheet-display, 
-	.sheet-aug-box .sheet-display,
-	.sheet-powers-box .sheet-display {
+	.sheet-lifestyle .sheet-settings div {
 		display: inline-block;
 		width  : 100%;
 	}
@@ -947,79 +965,6 @@
 				.sheet-contacts .sheet-display-row:nth-of-type(1) {
 					margin-right: 2%;
 					width       : 53%;}
-
-	/***** GEAR *****/
-		.sheet-item-box h3:first-child{ margin-right: 80%; }
-
-		/***** GEAR SETTINGS *****/
-			.sheet-item-box input[type='text'] {width: 85%;}
-
-		/***** GEAR DISPLAY *****/
-			.sheet-item-box .sheet-display-row,
-			.sheet-aug-box .sheet-settings input[type='number'] {
-				width: 10%;}
-
-			.sheet-aug-box .sheet-display-row,
-			.sheet-aug-box .sheet-display-row:nth-of-type(1),
-			.sheet-item-box .sheet-display-row:nth-of-type(1) {
-				margin-right: 2%;}	
-
-			.sheet-item-box .sheet-display-row:nth-of-type(1) {
-				width: 82%;}
-
-		/***** AUGMENTATIONS (AUGS) *****/
-			.sheet-aug-box h3:nth-of-type(1) {margin-right: 55%;}
-			.sheet-aug-box h3:nth-of-type(2) {margin-right: 3%;}
-
-			/***** AUGMENTATIONS SETTINGS *****/
-				.sheet-aug-box .sheet-settings input[type='text'],
-				.sheet-aug-box .sheet-display-row:nth-of-type(1) {
-					width: 75%;}
-
-				.sheet-aug-box .sheet-settings input[type='number'] {margin-right: 1%;}
-
-			/***** AUGMENTATIONS DIPLAY *****/
-				.sheet-aug-box .sheet-display-flag {top: 1px;}
-
-				.sheet-aug-box .sheet-display-row {
-					text-align: center;
-					width: 8%;}
-
-				.sheet-aug-box .sheet-display-row:nth-of-type(1) {text-align: left;}
-
-	/***** MAGIC & POWERS *****/
-		.sheet-magic .sheet-htab {margin-right: -45px;}
-		.sheet-magic .sheet-htab:first-child {margin-left: -45px;}
-
-		.sheet-powers-box h3,
-		.sheet-powers-box .sheet-settings input[type='text'],
-		.sheet-powers-box .sheet-display .sheet-display-row:nth-of-type(1) {
-			margin-right: 1%;
-		}
-
-		.sheet-powers-box h3,
-		.sheet-powers-box input[type='number'],
-		.sheet-powers-box h3:nth-of-type(3),
-		.sheet-powers-box .sheet-display .sheet-display-row:nth-of-type(2) {
-			width: 8%;
-		}
-
-		.sheet-powers-box h3:nth-of-type(3),
-		.sheet-powers-box .sheet-display .sheet-display-row:nth-of-type(2) {
-			margin-right: 0px;
-		}
-
-		.sheet-powers-box h3:nth-of-type(1),
-		.sheet-powers-box .sheet-settings input[type='text'],
-		.sheet-powers-box .sheet-display .sheet-display-row:nth-of-type(1) {
-			width: 85%;}
-
-		/***** MAGIC & POWERS SETTINGS *****/
-			.sheet-powers-box .sheet-settings {width: 100%;}
-
-			/***** RITUAL SETTINGS *****/
-				.sheet-magic-rituals input[type='text'] {width: 95%;}
-				.sheet-magic-rituals .sheet-settings select {width: 32%;}
 
 		/***** MAGIC DISPLAY *****/
 			.sheet-combat-type-hide {display: none;}
