--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -28,14 +28,23 @@
 
 /* MIXIN
 	============================= */
-@mixin repeatingInformation($endColumn) {
+@mixin repeatingInformation($endColumn, $longCollapseFlag) {
 	label[data-i18n-title="notes"], 
 	h3[data-i18n='notes'], 
 	div.sheet-collapse { 
 		grid-column: 1 / #{$endColumn};
 	}
 
-	input.sheet-collapse-flag, 
+	input.sheet-collapse-flag {
+		@if $longCollapseFlag {
+			grid-area: 1 / 1 / 1 / #{$endColumn - 1};
+			position: absolute;
+			width: 100%;
+		} @else {
+			grid-area: 1 / #{$endColumn - 2} / 1 / #{$endColumn - 1};
+		}
+	}
+
 	input.sheet-collapse-flag + span.sheet-pictos { 
 		grid-area: 1 / #{$endColumn - 2} / 1 / #{$endColumn - 1}; 
 	}
@@ -406,7 +415,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			div.repitem {
 				grid-template-columns: $skillGrid;
 
-				@include repeatingInformation(7);
+				@include repeatingInformation(7, false);
 
 				input[name="attr_damage"],
 				input[name="attr_dicepool_modifier"] {
@@ -418,6 +427,50 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 					grid-template-columns: $skillGrid;
 				}
 			}
+		}
+
+		/*** AUGS ****/
+		div.sheet-augs {
+			$augsGrid: 1fr 5em 5em 1em 1em;;
+
+			div.sheet-headers {
+				display: grid;
+				grid-template-columns:$augsGrid;
+			} 
+
+			div.repitem {
+				grid-template-columns: $augsGrid;
+				@include repeatingInformation(6, true);
+
+				input[name='attr_augementation'] { text-align: left; }
+
+				div.sheet-settings { 
+					grid-column: 1 / 6;
+					grid-template-columns: $augsGrid;
+				}
+			}	
+		}
+
+		/*** GEAR ****/
+		div.sheet-gear {
+			$gearGrid: 1fr 5em 5em 1em 1em;;
+
+			div.sheet-headers {
+				display: grid;
+				grid-template-columns:$gearGrid;
+			} 
+
+			div.repitem {
+				grid-template-columns: $gearGrid;
+				@include repeatingInformation(6, true);
+
+				input[name='attr_item'] { text-align: left; }
+
+				div.sheet-settings { 
+					grid-column: 1 / 6;
+					grid-template-columns: $gearGrid;
+				}
+			}	
 		}
 
 		/***** MAGIC *****/
@@ -439,12 +492,13 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			} 
 
 
+			/***** SPELLS & PREPARTATIONS *****/
 			div.sheet-spellsForumlas {
 
 				div.repitem {
 					grid-template-columns: $magicGrid;
 
-					@include repeatingInformation(8);
+					@include repeatingInformation(8, false);
 
 					input[name="attr_damage"],
 					input[name="attr_dicepool_modifier"] {
@@ -462,10 +516,11 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				}
 			}
 
+			/***** RITUALS *****/
 			div.sheet-magic-rituals {
 				$ritualsGrid: 1fr 1em 1em;
 
-				@include repeatingInformation(4);
+				@include repeatingInformation(4, false);
 
 				div.repitem {
 					grid-template-columns: $ritualsGrid;
@@ -481,7 +536,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				}
 			}
 
-			/***** MAGICAL PREPERATIONS *****/
+			/***** PREPARATIONS *****/
 			div.sheet-magic-preps {
 				/* READIED PREPARATIONS */
 				div.sheet-prepared-preparations {
@@ -494,7 +549,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 					div.repitem {
 						grid-template-columns: $preparationsGrid ;
 
-						@include repeatingInformation(7);
+						@include repeatingInformation(7, false);
 
 						div.sheet-settings { 
 							grid-column: 1 / 7;
@@ -505,20 +560,40 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 					}
 				}
 			}
+
+
+			/***** ADEPT POWERS *****/
+			div.sheet-powers {
+				$powersGrid: 1fr 3em 1em 1em;;
+
+				div.sheet-headers {
+					grid-template-columns:$powersGrid;
+				} 
+
+				div.repitem {
+					grid-template-columns: $powersGrid;
+					@include repeatingInformation(5, true);
+
+					div.sheet-settings { 
+						grid-column: 1 / 5;
+						grid-template-columns: $powersGrid;
+					}
+				}
+			}
 		}
 
 
 		/*** MATRIX ****/
 		div.sheet-matrix {
 			h3 { color: $blacker; }
-			
+
 			div.sheet-programs {
 				$programGrid: 1fr 1em 1em;
 
 				div.repitem {
 					grid-template-columns: $programGrid;
 					@extend %borderBottom;
-					@include repeatingInformation(4);
+					@include repeatingInformation(4, true);
 				}
 
 				div.sheet-settings { 
@@ -549,7 +624,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				div.repitem {
 					grid-template-columns: $complexFormsGrid;
 
-					@include repeatingInformation(7);
+					@include repeatingInformation(7, false);
 
 					div.sheet-row {
 						grid-column: 1 / 7;
