--- a/Shadowrun5thEdition/src/pug/_variables.pug
+++ b/Shadowrun5thEdition/src/pug/_variables.pug
@@ -12,6 +12,9 @@
 - const formTargets = ['Device', 'File', 'Host', 'IC', 'Persona', 'Self', 'Sprite'];
 - const formDurations = ['Extended', 'Instant', 'Permanent', 'Other', 'Sustained'];
 
+//- AUGEMENATATIONS ARRAY
+- const augementations = ['Augmentations', 'Rating', 'Essence'];
+
 //- LOOP OBJECTS
 - const limitObject = {'Mental':'mental_limit', 'Physical':'physical_limit', 'Social':'social_limit', 'Attack':'attack', 'Data Processing':'data_processing', 'Firewall':'firewall', 'Sleaze':'sleaze'};
 - const hostObject = {'Host Rating': ['host_rating', '5'], 'Attack': ['attack', '5'], 'Sleaze': ['sleaze', '6'], 'Data Processing': ['data_processing', '7'], 'Firewall': ['firewall', '8']};
